backend/Openshift/openshift_hosting_db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myventory-db-deployment
  namespace: myventory
  labels:
    app: myventory-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myventory-db
  template:
    metadata:
      labels:
        app: myventory-db
    spec:
      containers:
        - name: myventory-db
          image: postgres:17.4
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: 1Gi
              cpu: 1
              ephemeral-storage: "1Gi"
            limits:
              memory: 1Gi
              cpu: 1
              ephemeral-storage: "1Gi"
          volumeMounts:
            - name: myventory-db-storage
              mountPath: /var/lib/postgresql/data
      automountServiceAccountToken: false
      volumes:
        - name: myventory-db-storage
          persistentVolumeClaim:
            claimName: myventory-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: myventory-db-service
  namespace: myventory
spec:
  selector:
    app: myventory-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
