backend/Openshift/openshift_hosting_pgadmin.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  namespace: myventory
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 1Gi
              cpu: 1
              ephemeral-storage: "1Gi"
            limits:
              memory: 1Gi
              cpu: 1
              ephemeral-storage: "1Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 1
      automountServiceAccountToken: false
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: myventory
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pgadmin-route
  namespace: myventory
spec:
  to:
    kind: Service
    name: pgadmin-service
  port:
    targetPort: 80
